human-intervention-logs/io.projectreactor.tools:blockhound:1.0.8.RELEASE/gradle-test/gradle-test-2026-06-10T15-55-43-091389Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.projectreactor.tools:blockhound:1.0.8.RELEASE
Command: `/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-f4e48da3/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible and 21 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :tck-test-support:processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-f4e48da3/tests/src/io.projectreactor.tools/blockhound/1.0.8.RELEASE/src/test/java/io_projectreactor_tools/blockhound/AgentBuilderInnerRedefinitionStrategyInnerResubmissionStrategyInnerEnabledInnerResubmissionInstallationListenerTest.java:38: error: no suitable method found for resubmitImmediate(Junction<NamedElement>)

                .resubmitImmediate(ElementMatchers.named(SAMPLE_TYPE_NAME))
                ^
[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-f4e48da3/tests/src/io.projectreactor.tools/blockhound/1.0.8.RELEASE/build/reports/problems/problems-report.html    method WithoutResubmissionSpecification.resubmitImmediate(ElementMatcher<String>) is not applicable

      (argument mismatch; inference variable T has incompatible bounds
          equality constraints: String
          upper bounds: NamedElement)
    method WithoutResubmissionSpecification.resubmitImmediate(ResubmissionImmediateMatcher) is not applicable
      (argument mismatch; no instance(s) of type variable(s) T exist so that Junction<T> conforms to ResubmissionImmediateMatcher)
  where T is a type-variable:
    T extends NamedElement declared in method <T>named(String)
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-f4e48da3/tests/src/io.projectreactor.tools/blockhound/1.0.8.RELEASE/src/test/java/io_projectreactor_tools/blockhound/AgentBuilderInnerRedefinitionStrategyInnerResubmissionStrategyInnerEnabledInnerResubmissionInstallationListenerTest.java:38: error: no suitable method found for resubmitImmediate(Junction<NamedElement>)
                  .resubmitImmediate(ElementMatchers.named(SAMPLE_TYPE_NAME))
                  ^
      method WithoutResubmissionSpecification.resubmitImmediate(ElementMatcher<String>) is not applicable
        (argument mismatch; inference variable T has incompatible bounds
            equality constraints: String
            upper bounds: NamedElement)
      method WithoutResubmissionSpecification.resubmitImmediate(ResubmissionImmediateMatcher) is not applicable
        (argument mismatch; no instance(s) of type variable(s) T exist so that Junction<T> conforms to ResubmissionImmediateMatcher)
    where T is a type-variable:
      T extends NamedElement declared in method <T>named(String)
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 4s

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
11 actionable tasks: 1 executed, 10 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-f4e48da3/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.projectreactor.tools:blockhound:1.0.8.RELEASE failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
9 actionable tasks: 1 executed, 8 up-to-date
